# mastermind

./: .gitignore  CMakeLists.txt  README.md
include/mastermind/: mastermind.hpp
src/: main.cpp  mastermind.cpp
test/: mastermind_test.cpp
